--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -73,10 +73,10 @@
 
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{{ url_for('static', path='img/banners/banner1.jpg') }}" alt="">
+        <img src="{{ url_for('static', path='img/banners/sevor1.jpg') }}" alt="">
       </div>
       <div class="carousel-item">
-        <img src="{{ url_for('static', path='img/banners/banner2.jpg') }}" alt="">
+        <img src="{{ url_for('static', path='img/banners/sevor2.jpg') }}" alt="">
       </div>
       <div class="carousel-item">
         <img src="{{ url_for('static', path='img/banners/banner3.jpg') }}" alt="">
